# numerical_function_spaces

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  apt.txt  pyproject.toml  requirements.txt
docs/: Makefile  Orlicz_functions.ipynb  animations.ipynb  changelog.md  conf.py  conjugate_plots_Phi_p_Psi.ipynb  example.ipynb  index.md  make.bat  norms.ipynb  plots.ipynb  refs.bib  requirements.txt  sequences.ipynb
src/numerical_function_spaces/orlicz_spaces/: __init__.py  conjugate.py  norms.py  orlicz_functions.py  plots.py
tests/: test_numerical_function_spaces.py
tests/orlicz_spaces/: test_conjugate.py  test_norms.py
