[tool.poetry]
name = "numerical_function_spaces"
version = "0.1.0"
description = "An attempt to numerically study the geometry of the Orlicz function spaces"
authors = ["Adam Bohonos"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
tqdm = "^4.66.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
jupyter = "^1.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
